// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpotlightMenuListItem renders correctly 1`] = `
<li
  className="countries-menu-list__countries js-profile-country-item"
>
  <a
    className="countries-menu-list__item js-menu-item js-search-item countries-menu-list__item--parent-first"
    data-testid="spotlight-menu-list-item-link"
    onClick={[Function]}
  >
    busia
    <style
      jsx={true}
    >
      
          :before {
            display: none;
          }
        
    </style>
  </a>
</li>
`;

exports[`SpotlightMenuListItem with children renders correctly 1`] = `
<li
  className="countries-menu-list--has-children"
>
  <a
    className="countries-menu-list__item js-menu-item js-search-item countries-menu-list__item--parent-first"
    data-testid="spotlight-menu-list-item-link"
    onClick={[Function]}
  >
    palisa
    <style
      jsx={true}
    >
      
          :before {
            display: inline-block;
          }
        
    </style>
  </a>
  <div
    active={false}
  >
    Testing
  </div>
</li>
`;
